app/assets/stylesheets/_forms.scss
// =============================================================================
// FORMS
// =============================================================================

input[type="text"],
input[type="email"],
input[type="password"],
input[type="number"],
input[type="date"] {
  @include placeholder-style(italic);
  background-color: transparent;
  font-family: $sans;
  font-size: 100%;
  border: none;
  border-bottom: 1px solid $gray1;
  padding: 0 5px;
  height: 30px;
  outline: 0 !important;

  &[disabled] {
    cursor: not-allowed;
    pointer-events: none;
    opacity: .4;
  }
}

textarea {
  @include placeholder-style(italic);
  font-family: $sans;
  font-size: 100%;
  border-color: $gray2;
  outline: none;
  &.resizeable {
    border: none;
    border-bottom: 1px solid $gray2;
    overflow: hidden;
    resize: none;
  }
}


label {
  color: $gray3;
  line-height: 40px;
  text-transform: uppercase;
  min-height: 40px;
  display: inline-block;
  vertical-align: middle;

  &.is-normal-case {
    text-transform: inherit;
  }
}

.value {
  line-height: 2.9em;

  &.annotation {
    font-size: 80%;
    line-height: 1.5em;
    color: $gray3;
    max-width: 250px;
    padding-top: 10px;
  }
}

.input-unit {
  align-items: center;

  .unit {
    color: $gray3;
    line-height: 40px;
    min-height: 40px;
    display: inline-block;
    vertical-align: middle;
  }
}

fieldset {
  padding: 0;
  border: 0;
}

.form-field {
  label {
    line-height: 1.6;
    margin-top: 9px;
  }

  .Select-control {
    padding-bottom: 6px;
    height: 34px;
  }

  .value{
    margin-left: 5px;
  }

  input:not(.input-small) {
    margin-top: 5px;
  }
}

// Checkboxes ---------------------------------------------------------//

input[type="checkbox"] {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;

  & + label {
    color: $black;
    text-transform: none;
    display: table;
    position: relative;
    margin-left: 32px;
    margin-bottom: 10px;
    cursor: pointer;

    &:before {
      content: '';
      font-family: $sans;
      color: $white;
      font-weight: 300;
      font-size: 12px;
      line-height: 15px;
      text-align: center;
      width: 18px;
      height:18px;
      background: none;
      border: 2px solid $black;
      top: 10px;
      left: -32px;
      position: absolute;
      border-radius: 2px;
      transition: all 0.4s;
    }
    &.inline {
      display: inline-block;
      margin-right: 10px;
    }
  }
  & + label#include-subsites {
    margin-left: 45px;
    &:before {
      border-color: rgb(105,105,105);;
    }
  }
  & + label.row {
    margin-bottom: 0px;
  }
  &:checked + label:before {
    content: '\2714';
    background: $black;
  }
  &:checked + label#include-subsites:before {
    background: none;
  }
  &.disabled + label,
  &[disabled] + label,
  fieldset[disabled]  + label {
    cursor: not-allowed;
    pointer-events: none; // Future-proof disabling of clicks
    opacity: .35;
  }
  & + label.cross {
    margin: 0;
    padding: 0;
    line-height: normal;

    &:before {
      display: none;
    }
  }
  &.power {
    & + label {
      display: inline-block;
      vertical-align: middle;
      margin: 0;
      padding-left: 40px;
      min-height: auto;
      &:before {
        background: image-url('ic-on-off.png') no-repeat right top;
        width: 32px;
        height: 20px;
        top: 12px;
        left: 0px;
        border: none;
        transition: none;
      }
      &:hover:before {
        background-position: right bottom;
      }
    }
    &:checked + label:before {
      content: '';
      background-position: left top;
    }
    &:checked:hover + label:before {
      background-position: left bottom;
    }
  }
}


// Radio buttons ---------------------------------------------------------//


input[type="radio"] {
  display: none;

  & + label {
    color: $black;
    text-transform: none;
    display: table;
    position: relative;
    margin-left: 32px;
    margin-bottom: 10px;
    cursor: pointer;

    &:before {
      content: '';
      font-family: $sans;
      color: $white;
      font-weight: 300;
      font-size: 12px;
      line-height: 14px;
      text-align: center;
      width: 18px;
      height:18px;
      background: none;
      border: 2px solid $black;
      top: 10px;
      left: -32px;
      position: absolute;
      border-radius: 50%;
      transition: all 0.4s;
    }
    &:after {
      content: '';
      background: $black;
      width: 10px;
      height: 10px;
      position: absolute;
      left: -28px;
      top: 14px;
      border-radius: 50%;
      opacity: 0;
      transition: all 0.4s;
    }
    &.inline {
      display: inline-block;
      margin-right: 10px;
    }
  }
  &:checked + label:after {
    opacity: 1;
  }
  &.disabled + label,
  &[disabled] + label,
  fieldset[disabled]  + label {
    cursor: not-allowed;
    pointer-events: none; // Future-proof disabling of clicks
    opacity: .35;
  }
}


// Input email & password for Devise ---------------------------------------------------------//

body.devise {
  input[type="email"],
  input[type="password"] {

    @include placeholder($sans, 25px);
    background: image-url('ic-login.png') no-repeat $white;

    &.filled {
      background: $white;
    }
  }

  input[type="email"] {
    background-position: left top;
  }

  input[type="password"] {
    background-position: left -40px;
  }
}

.small-quote {
  font-size: 70%;
  color: $gray3;
  font-style: italic;
  position: absolute;
}




// Input text & Area sizes ---------------------------------------------------------//


.input-xx-small {
  width: 20px !important;
}
.input-x-small {
  width: 40px;
}
.input-small {
  width: 70px;
}
.input-medium {
  width: 150px;
}
.input-large {
  width: 200px;
}
.input-x-large {
  width: 250px;
}
.input-xx-large {
  width: 400px;
}
.input-block {
  width: 100%;
}

// Input file style ---------------------------------------------------------//

.inputfile {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;
}

label.input,
.inputfile + label {
  font-family: $sans;
  font-weight: 400;
  color: $blue;
  display: inline-block;
  cursor: pointer;
  max-width: 350px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  position: relative;
}

.clear-input,
.clear-label {
  line-height: normal;
  display: none;
  position: absolute;
  right: 8px;
  top: 12px;
}

label.on {
  box-shadow: 0px 1px 3px rgba(0,0,0,0.4);
  padding: 0 30px 0 10px;
  width: 350px;
  span {
    color: $gray4;
    text-transform: lowercase;
  }
  .clear-input,
  .clear-label {
    display: block;
  }
}
.inputfile:focus + label,
.inputfile + label:hover {
    color: darken($blue, 10%);
}

.choose-picture {
  text-align: center;
  padding: 100px;
  border: 2px dashed $gray1;
  width: 540px;
  height: 450px;
  position: relative;

  h2 {
    margin: 0 0 8px 0;
    color: $gray2;
  }

  .ic140-picture {
    opacity: 0.4;
  }

  .clear-label {
    display: block;
  }
  &.on {
    border-color: $blue;
  }
}

.upload-new-file.picture {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;

  .upload-picture-title {
    margin-top: 100px;
  }

  input[type="file"] {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    width: 100%;
    z-index:2;
    opacity:0;
    cursor:pointer;
  }
  > img {
    position:absolute;
    width: 350px;
    min-height: 300px;
    max-height: 400px;
    top: 20px;
    left: 50%;
    margin-left: -175px;
    z-index:1;
    border:none;
    opacity: 0;
    &.uploaded {
      opacity: 1;
    }
  }

}

.file-uploaded {
  z-index: 99;
}

.file-uploaded + .upload-new-file {
  display: none;
}

.file-uploaded.remove {
  display: none;

  + .upload-new-file {
    display: block;
  }
}

#edit_user {
  input[type="text"], input[type="password"] {
    width: 400px;
  }
}

.input-required {
  color: #EB2122;
  border-bottom-color: #EB2122 !important;
}

.centered {
  display: flex;
  align-items: center;
}

div + .error,
input + .error {
  visibility: hidden;
}

div.input-required + .error,
input.input-required + .error {
  visibility: visible;
}

// .form-errors is written at the end of the form but should show up on the front
form {
  display: flex;
  flex-direction: column;

  > .form-errors {
    order: -1;
  }
}

.form-field {
  &.form-field--error {
    input, textarea {
      border-color: $red;
    }

    label {
      color: $red;
    }
  }

  > .form-field__label {
    flex: 0 0 17em;
  }
}

.errors {
  color: $red;
  > li {
    margin: 5px 0;
  }
}

.field-errors {

}
.form-errors {
  margin: 10px;
  border-bottom: 1px solid $red;
}

